--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -1,9 +1,11 @@
 .footer {
-    text-align: center;
-    
+    text-align: left;
     background-color: #6b6b6b;
+    margin: 0 auto;
     color: #fff;
     padding: 10px;
-    
     width: 100%;
+    font-size: 12px;
+    padding-left: 100px;
+    
 }  
