--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -171,16 +171,25 @@ hr {
 .about-me-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: stretch;
 }
 
 .about-me-description {
   flex: 1; 
-  margin-right: 20px; 
+  text-align: justify; 
+  margin-right: auto;
+  max-width: 400px;
+  line-height: 1.5;
+  font-size: 14px;
+  
+
 }
 
 .about-me-picture {
   flex: 0 0 100px; 
+  margin-right: auto;
+  margin-left: auto;
+  
 }
 
 .about-me-picture img {
@@ -197,7 +206,7 @@ hr {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 20px; /* Adjust margin as needed */
+  
 }
 
 /* Footer */
