--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -3,32 +3,7 @@ body {
   font-family: "Segoe UI", sans-serif; /* Add font-family */
 }
 
-/* Navigation Bar */
-/* .navbar {
-  overflow: hidden;
-  background-color: #333;
-}
 
-.navbar a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 10px 15px;
-  text-decoration: none;
-  font-size: 14px;
-}
-
-.navbar a:hover {
-  background-color: #aea8a8;
-  color: rgb(35, 35, 35);
-}
-
-.navbar a.active {
-  font-weight: bold;
-  background-color: #ddd;
-  color: rgb(12, 12, 12);
-} */
 
 /* Title Big*/
 .title {
@@ -120,11 +95,11 @@ body {
 /* Fading animation */
 .fade {
   animation-name: fade;
-  animation-duration: 2s;
+  animation-duration: 1.2s;
 }
 
 @keyframes fade {
-  from {opacity: .4}
+  from {opacity: .6}
   to {opacity: 1}
 }
 
@@ -209,16 +184,93 @@ hr {
   
 }
 
-/* Footer */
-/* .footer {
-  text-align: center;
-  
-  background-color: #6b6b6b;
-  color: #fff;
-  padding: 10px;
-  
-  width: 100%;
-  
-  /* bottom: 0;
-  z-index: 999; } */
 
+
+/* Page 2 */
+/* CSS for search button */
+.search {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.search input[type="text"] {
+  padding: 8px;
+  width: 600px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+}
+
+.search button {
+  padding: 8px 20px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  margin-left: 5px; /* Add spacing between input and button */
+}
+
+.search button:hover {
+  background-color: #45a049;
+}
+
+
+
+
+/* recipe table content */
+
+.recipe-table {
+  margin-top: 20px;
+}
+
+.recipe-table table {
+  width: 100%;
+}
+
+.recipe-table td {
+  vertical-align: top;
+  padding: 10px;
+  border-bottom: 1px solid #ccc;
+}
+
+.recipe-table a {
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.recipe-table img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin-top: 10px;
+}
+
+.container {
+  display: flex; /* Use flexbox */
+}
+
+.left {
+  flex: 7; /* Takes 70% of the container */
+  background-color: #f0f0f0; /* Just for visualization */
+}
+
+.right {
+  flex: 3; /* Takes 30% of the container */
+  background-color: #ccc; /* Just for visualization */
+}
+
+.post-content {
+  display: flex;
+}
+
+.post-description {
+  flex:7;
+  text-align: justify;
+  margin: 20px;
+}
+
+.post-image {
+  flex: 3;
+}
