--- a/CSS/recipepage.css
+++ b/CSS/recipepage.css
@@ -9,19 +9,21 @@
 /* Page 2 */
 /* CSS for search button */
 .search {
-    text-align: center;
+    text-align: normal;
     margin-top: 20px;
   }
   
   .search input[type="text"] {
     padding: 8px;
-    width: 650px;
+    width: 750px;
     border: 1px solid #ccc;
     border-radius: 4px;
     font-size: 16px;
+    margin-left: 0;
+    
   }
   
-    .search button {
+    /* .search button {
     padding: 8px 20px;
     background-color: #4CAF50;
     color: white;
@@ -29,13 +31,13 @@
     border-radius: 4px;
     cursor: pointer;
     font-size: 16px;
-    margin-left: 5px; /* Add spacing between input and button */
+    margin-left: 5px; 
   }
   
   .search button:hover {
     background-color: #45a049;
   }
-  
+   */
   
   
   
