--- a/CSS/mainpage.css
+++ b/CSS/mainpage.css
@@ -1,4 +1,3 @@
-
 /* Title Big*/
 .title {
   text-align: center;
@@ -6,7 +5,10 @@
   margin-top: 20px;
 }
 
-* {box-sizing:border-box}
+* {
+  box-sizing: border-box
+}
+
 /*  */
 /*  */
 /* Slideshow container */
@@ -23,11 +25,12 @@
   width: 100%;
   height: 500px;
   object-fit: cover;
-  
+
 }
 
 /* Next & previous buttons */
-.prev, .next {
+.prev,
+.next {
   cursor: pointer;
   position: absolute;
   top: 50%;
@@ -48,21 +51,12 @@
   border-radius: 3px 0 0 3px;
 }
 
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
-
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
 
 /* The dots/bullets/indicators */
 .dot {
@@ -76,9 +70,12 @@
   transition: background-color 0.6s ease;
 }
 
-.active, .dot:hover {
+.active,
+.dot:hover {
   background-color: #717171;
 }
+
+
 
 /* Fading animation */
 .fade {
@@ -87,12 +84,15 @@
 }
 
 @keyframes fade {
-  from {opacity: .6}
-  to {opacity: 1}
+  from {
+    opacity: .6
+  }
+
+  to {
+    opacity: 1
+  }
 }
 
-/*  */
-/*  */
 
 /* Button */
 .button {
@@ -124,8 +124,10 @@
 }
 
 hr {
-  border: none; /* Remove default border */
-  border-top: 1px solid #000; /* Add custom border */
+  border: none;
+  /* Remove default border */
+  border-top: 1px solid #000;
+  /* Add custom border */
   margin-top: 25px;
 }
 
@@ -138,28 +140,29 @@ hr {
 }
 
 .about-me-description {
-  flex: 1; 
-  text-align: justify; 
+  flex: 1;
+  text-align: justify;
   margin-right: auto;
   max-width: 400px;
   line-height: 1.5;
   font-size: 14px;
-  
+
 
 }
 
 .about-me-picture {
-  flex: 0 0 100px; 
+  flex: 0 0 100px;
   margin-right: auto;
   margin-left: auto;
-  
+
 }
 
 .about-me-picture img {
-  width: 100%; 
-  display: block; 
-  
+  width: 100%;
+  display: block;
+
 }
+
 .about-me-title {
   width: 100%;
   text-align: center;
@@ -169,6 +172,5 @@ hr {
   display: flex;
   align-items: center;
   justify-content: center;
-  
-}
 
+}
