--- a/CSS/recipepage.css
+++ b/CSS/recipepage.css
@@ -1,29 +1,28 @@
-
 .title {
-    text-align: center;
-    font-size: 20px;
-    margin-top: 20px;
-  }
+  text-align: center;
+  font-size: 20px;
+  margin-top: 20px;
+}
 
 
 /* Page 2 */
 /* CSS for search button */
 .search {
-    text-align: normal;
-    margin-top: 20px;
-  }
-  
-  .search input[type="text"] {
-    padding: 8px;
-    width: 750px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
-    margin-left: 0;
-    
-  }
-  
-    /* .search button {
+  text-align: normal;
+  margin-top: 20px;
+}
+
+.search input[type="text"] {
+  padding: 8px;
+  width: 750px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+  margin-left: 0;
+
+}
+
+/* .search button {
     padding: 8px 20px;
     background-color: #4CAF50;
     color: white;
@@ -38,92 +37,98 @@
     background-color: #45a049;
   }
    */
-  
-  
-  
-  /* recipe table content */
-  
+
+
+
+/* recipe table content */
+
 .recipe-table {
-    margin-top: 20px;
-  }
-  
-  .recipe-table table {
-    width: 100%;
-  }
-  
-  .recipe-table td {
-    vertical-align: top;
-    padding: 10px;
-   
-  }
-  
-  .recipe-table a {
-    text-decoration: none;
-    font-weight: bold;
-  }
-  
-  .recipe-table img {
-    width: 100%;
-    height: 100%;
-    display: block;
-    
-    object-fit: cover;
-  }
-  
-  .post-name {
-    font-size: 25px;
-    font-weight: bold;
-  }
-  .post-content {
-    display: flex;
-  }
-  
-  .post-description {
-    flex:5;
-    text-align: justify;
-    margin-left: 40px;
-    margin-right: 40px;
-  }
-  
-  .post-image {
-    flex:5;
-    width: 300px;
-    height: 200px;
-    overflow: hidden;
-  }
+  margin-top: 20px;
+}
+
+.recipe-table table {
+  width: 100%;
+}
+
+.recipe-table td {
+  vertical-align: top;
+  padding: 10px;
+
+}
+
+.recipe-table a {
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.recipe-table img {
+  width: 100%;
+  height: 100%;
+  display: block;
+
+  object-fit: cover;
+}
+
+.post-name {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.post-content {
+  display: flex;
+}
+
+.post-description {
+  flex: 5;
+  text-align: justify;
+  margin-left: 40px;
+  margin-right: 40px;
+}
+
+.post-image {
+  flex: 5;
+  width: 300px;
+  height: 200px;
+  overflow: hidden;
+}
 
 
-  /* pagination */
-  .pagination {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 25px 10px;
-  }
-  
-  .page, .prev, .next {
-    padding: 8px 16px;
-    margin: 0 4px;
-    text-decoration: none;
-    color: #333;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  .page:hover, .prev:hover, .next:hover {
-    background-color: #f2f2f2;
-  }
-  
-  .prev, .next {
-    background-color: #f2f2f2;
-  }
-  
-  .prev:hover, .next:hover {
-    background-color: #ddd;
-  }
-  
-  .page.active {
-    background-color: #b5aeae;
-    color: #fff;
-  }
-  
+/* pagination */
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 25px 10px;
+}
+
+.page,
+.prev,
+.next {
+  padding: 8px 16px;
+  margin: 0 4px;
+  text-decoration: none;
+  color: #333;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.page:hover,
+.prev:hover,
+.next:hover {
+  background-color: #f2f2f2;
+}
+
+.prev,
+.next {
+  background-color: #f2f2f2;
+}
+
+.prev:hover,
+.next:hover {
+  background-color: #ddd;
+}
+
+.page.active {
+  background-color: #b5aeae;
+  color: #fff;
+}
