Update Form, finishing the code

--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -1,6 +1,6 @@
 .footer {
     text-align: left;
-    background-color: #6b6b6b;
+    background-color: #739c76;
     margin: 0 auto;
     color: #fff;
     padding: 10px;
