--- a/CSS/recipepage.css
+++ b/CSS/recipepage.css
@@ -14,14 +14,16 @@
 
 .search input[type="text"] {
   padding: 8px;
-  width: 750px;
+  width: 100%;
   border: 1px solid #ccc;
   border-radius: 4px;
   font-size: 16px;
   margin-left: 0;
 
 }
-
+.search-result {
+  width: 100%;
+}
 .search-result a:hover {
   color: #01447e;
   text-decoration: underline;
