--- a/CSS/form.css
+++ b/CSS/form.css
@@ -1,11 +1,11 @@
 .title {
   text-align: center;
-  font-size: 20px;
+  font-size: 1.25em;
   margin-top: 20px;
 }
 
 .title p {
-  font-size: 18px;
+  font-size: 1.1em;
 }
 
 
@@ -25,13 +25,13 @@ form {
   margin-bottom: 15px;
 }
 .checkbox-group label {
-  font-size: 17px;
+  font-size: 1.25em;
 }
 label {
   display: block;
   margin-bottom: 5px;
   font-weight: bold;
-  font-size: 22px;
+  font-size: 1.25em;
 }
 
 input[type="text"],
@@ -40,12 +40,14 @@ input[type="number"],
 input[type="file"],
 input[type="email"],
 textarea {
+  font-family: 'Segoe UI', sans-serif;
   width: 100%;
   padding: 10px;
   margin-top: 5px;
   border: 1px solid #ccc;
   border-radius: 5px;
 }
+
 
 input[type="radio"] {
   margin-right: 10px;
@@ -65,7 +67,7 @@ input[type="radio"] {
 
 .radio-item label {
   margin-left: 5px;
-  font-size: 15px;
+  font-size: 1em;
 }
 
 
@@ -110,7 +112,7 @@ button[type="reset"].reset-button {
 }
 
 button[type="submit"] {
-  background-color: #739add;
+  background-color: #4b86eb;
   color: white;
   border: none;
   cursor: pointer;
@@ -118,7 +120,7 @@ button[type="submit"] {
 }
 
 button[type="reset"].reset-button {
-  background-color: #e1776f;
+  background-color: grey;
   color: white;
   border: none;
   cursor: pointer;
@@ -128,7 +130,7 @@ button[type="reset"].reset-button {
 .checkbox-group {
   display: flex;
   align-items: center;
-  font-size: 10px; 
+  font-size: 0.625em; 
 }
 
 .checkbox-group label {
