--- a/CSS/mainpage.css
+++ b/CSS/mainpage.css
@@ -1,7 +1,7 @@
 /* Title Big*/
 .title {
   text-align: center;
-  font-size: 25px;
+  font-size: 1.5625em;
   margin-top: 20px;
 }
 
@@ -37,7 +37,7 @@
   padding: 16px;
   color: white;
   font-weight: bold;
-  font-size: 18px;
+  font-size: 1.125em;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
@@ -100,7 +100,7 @@
 
 .button button {
   padding: 10px 20px;
-  font-size: 16px;
+  font-size: 1em;
   background-color: #515852;
   color: white;
   border: none;
@@ -143,7 +143,8 @@ hr {
   margin-right: auto;
   max-width: 400px;
   line-height: 1.5;
-  font-size: 14px;
+  font-size: 0.875em;
+  padding-right: 10px;
 
 
 }
